# scientific-programming-kcantrell05

./: .breakpoints  CONCEPTS.md  animate_diurnal_heat_wave.py  animation_report.html  build_matrices.py  calculate_pythagorean_triples.c  cradle.py  create_dictionaries_and_strings.sh  create_loops_and_lists.sh  create_user_input_and_error_handling.sh  dictionaries_examples.py  example.py  freefall_kinematics.py  kinematic_energies.py  main.py  matrices.py  practice_functions.py  pyproject.toml  triples.x
dictionaries_and_strings/: animate_wavepacket.py  compare_list_and_dictionary.py  create_constants_dictionary.py  create_stars_dictionary.py  plot_viscosities.py  question_15.py  read_and_plot_logarithmic_sum_output.py
final_exam/: calculate_bivariate_statistics.py  calculate_quadratic_fit.py  cantrell_PHYS241FinalScript.py  equations_of_state.py  read_two_columns_text.py
final_review/: annotate_plot.py  calculate_bivariate_statistics (copy).py  calculate_lowest_eigenvectors.py  calculate_quadratic_fit (copy).py  curve_fit_array.py  plot_data_with_fit.py  read_two_columns_text.py
functions_and_branching/: convert_celsius_temperature_to_fahrenheit.py  sum_sines.py
loops_and_lists/: generate_coordinate_grid.py  sum_integer_reciprocals_using_while.py  sum_integers.py  table_temperature_conversion_and_approximation.py  table_temperature_conversion_with_while.py  table_vertical_projectile_positions.py  table_vertical_projectile_with_lists.py
project/: project.py
python/: fifth_eigenvector.py  tenth_eigenvector.py
(+2 files in other folders)
