[tool.poetry]
name = "repl-nix-scientific-programming-kcantrell05"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_scientific_programming_kcantrell05"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
example = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
